--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://usuario:contraseña@localhost:5432/matizvision
+DATABASE_URL=postgres://javito:Mamita10.@localhost:5432/matizvision
 JWT_SECRET=matizvision_secreta_01
